--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
     password: root
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
+
+  redis:
+    host: localhost
+    port: 6379
+    password:
+    database: 1
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 server:
